--- a/index.html
+++ b/index.html
@@ -280,16 +280,18 @@
 	<button id="search">Search</button>
 	<button id="clear">Clear</button>
 	<br/>
-	
-	<div>
+	<table>
+	<tr>
+	<td>
 		Input:<br/>
 		<canvas id="writebox" width="100" height="100"></canvas>
-	</div>
-	<div>
+	</td>
+	<td>
 		Normalized input:</br>
 		<canvas id="normalized" width="100" height="100"></canvas>
-	</div>
-	
+	</td>
+	</tr>
+	</table>
 	<fieldset>
 		<legend>Corpus</legend>
 	<div id="corpus">
