--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 			cwriting = normalize(writing);
 
 			window.writings.push(cwriting);
-			var corpuscanvas = $('<canvas width="100" height="100"/>');
+			var corpuscanvas = $('<canvas width="100" height="100" style="width:50"/>');
 			var corpuscontext = corpuscanvas[0].getContext('2d');
 			
 			drawWriting(corpuscontext, cwriting);
